fix header overlapping page content

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,12 @@
 .app {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 52px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
   app-header {
     position: fixed;
     top: 0;
